--- a/index.html
+++ b/index.html
@@ -13,7 +13,38 @@
 
 
 <body>
-
+    <section class="nav">
+        <nav class="navbar" style="background-color: #130048;">
+          <!-- Navbar content -->
+          <div class="container-fluid">
+            <!-- Navbar content -->
+            <a class="navbar-brand" href="#">
+              <img src="/MG (1).png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
+            </a>
+            <li>
+              <a class="home" href="#">Home</a>
+            </li>
+            <li>
+              <a class="about" href="#">About</a>
+            </li>
+            <li>
+              <a class="resume" href="#">Resume</a>
+            </li>
+            <li>
+              <a class="skills" href="#">Skills</a>
+            </li>
+            <li>
+              <a class="testimonials" href="#">Testimonials</a>
+            </li>
+            <li>
+              <a class="projects" href="#">Projects</a>
+            </li>
+            <li>
+              <a class="contact" href="#">Contact Me</a>
+            </li>
+          </div>
+        </nav>
+      </section>
 </body>
 
 </html>
