--- a/index.html
+++ b/index.html
@@ -1,50 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Masoodahs Portfolio</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Masoodahs Portfolio</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-
 <body>
-    <section class="nav">
-        <nav class="navbar" style="background-color: #130048;">
-          <!-- Navbar content -->
-          <div class="container-fluid">
-            <!-- Navbar content -->
-            <a class="navbar-brand" href="#">
-              <img src="/MG (1).png" alt="Logo" width="60" height="60" class="d-inline-block align-text-top">
-            </a>
-            <li>
-              <a class="home" href="#">Home</a>
-            </li>
-            <li>
-              <a class="about" href="#">About</a>
-            </li>
-            <li>
-              <a class="resume" href="#">Resume</a>
-            </li>
-            <li>
-              <a class="skills" href="#">Skills</a>
-            </li>
-            <li>
-              <a class="testimonials" href="#">Testimonials</a>
-            </li>
-            <li>
-              <a class="projects" href="#">Projects</a>
-            </li>
-            <li>
-              <a class="contact" href="#">Contact Me</a>
-            </li>
-          </div>
+    <section class="navSec">
+        <nav class="navbar navbar-expand-lg" style="background-color: #130048;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="/MG (1).png" alt="Logo" width="60" height="60"
+                        class="d-inline-block align-text-top"></a> <!-- Edit the text here -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#home" style="color: rgb(255, 204, 0);">Home <span
+                                    class="sr-only"></span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about" style="color: rgb(255, 204, 0);">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#resume" style="color: rgb(255, 204, 0);">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Testimonials</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-      </section>
+        <div class="Line1" style="width: 1473px; height: 0px; border: 1px #FFD600 solid"></div>
+    </section>
+
+    <section class="homeSec" id="home">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div class="overlay-container">
+                        <img src="/backgroounds/back1.png" class="img-fluid" alt="Image" width="100%" height="100%">
+                        <div class="overlay-text">
+                            <h1 class="display-1">Masoodah George</h1>
+                            <h3>Web Developer</h3>
+                        </div>
+                    </div>
+                    <div class="overlay-image">
+                        <img src="/backgroounds/download.jpg" class="me" alt="Overlay Image">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--my picture-->
+    </section>
+
+    <section class="aboutSec" id="about">
+        <div class="abtSec"
+            style="width: 1; height: 615px; background: linear-gradient(180deg, #130048 0%, #4C3D75 77%)"></div>
+        <div class="AboutMe"
+            style="width: 1; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            About me</div>
+        <div class="Text"
+            style="width: 654px; height: 449px; text-align: center; color:rgb(255, 204, 0); font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</div>
+    </section>
+
+    <section class="resumeSec" id="resume">
+        <div class="resSec"
+            style="width: 2; height: 881px; background: linear-gradient(180deg, #4C3D75 50%,#4C3D75 50% )">
+        </div>
+        <div class="resume"
+            style="width: 311px; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            Resume</div>
+        <div class="line2"
+            style="width: 660px; height: 0px; transform: rotate(90deg); transform-origin: 0 0; border: 1px #FFD600 solid">
+        </div>
+        <div class="arrow1"
+            style="width: 351.01px; height: 0px; transform: rotate(-180deg); transform-origin: 0 0; border: 2px #FFD600 solid">
+        </div>
+        <div class="arrow2" style="width: 351.01px; height: 0px; border: 2px #FFD600 solid"></div>
+        <div class="highschl"
+            style="width: 183px; height: 37px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            High School</div>
+        <div class="text1"
+            style="width: 250px; height: 136px; color: rgba(255, 214, 0, 0.67); font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            Matriculated in 2023 from Spine Road High School.</div>
+        <div class="lca"
+            style="width: 309px; height: 37px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 700; word-wrap: break-word">
+            Life Choices Academy</div>
+        <div class="text2"
+            style="width: 301px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            Started at Life Choices in 2024, just after finishing High School.
+        </div>
+    </section>
+
+    <section>
+        <div class="skillsSec" style="width: 1; height: 758px; background: linear-gradient(180deg, #4C3D75 50%, #4C3D75 50%)"></div>
+        <div class="skills"
+            style="width: 311px; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+            Skills</div><div class="Rectangle23" style="width: 250px; height: 46px; background: #E5E4E4"></div>
+        <div class="Rectangle22" style="width: 250px; height: 46px; background: #E5E4E4"></div>
+        <div class="Rectangle21" style="width: 250px; height: 46px; background: #E5E4E4"></div>
+        <div class="Rectangle24"
+            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
+        </div>
+        <div class="Rectangle25"
+            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
+        </div>
+        <div class="Rectangle26"
+            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
+        </div>
+    </section>
+
 </body>
 
 </html>
