--- a/index.html
+++ b/index.html
@@ -12,43 +12,47 @@
 
 <body>
     <section class="navSec">
-        <nav class="navbar navbar-expand-lg" style="background-color: #130048;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="/MG (1).png" alt="Logo" width="60" height="60"
-                        class="d-inline-block align-text-top"></a> <!-- Edit the text here -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#home" style="color: rgb(255, 204, 0);">Home <span
-                                    class="sr-only"></span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about" style="color: rgb(255, 204, 0);">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#resume" style="color: rgb(255, 204, 0);">Resume</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Testimonials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: rgb(255, 204, 0);">Contact</a>
-                        </li>
-                    </ul>
+        <div class="fixed-top">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="/MG (1).png" alt="Logo" width="60" height="60"
+                            class="d-inline-block align-text-top"></a> <!-- Edit the text here -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#home" style="color: rgb(255, 204, 0);">Home <span
+                                        class="sr-only"></span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#about" style="color: rgb(255, 204, 0);">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#resume" style="color: rgb(255, 204, 0);">Resume</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#skills" style="color: rgb(255, 204, 0);">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#testimonials"
+                                    style="color: rgb(255, 204, 0);">Testimonials</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#projects" style="color: rgb(255, 204, 0);">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact  " style="color: rgb(255, 204, 0);">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
-        <div class="Line1" style="width: 1473px; height: 0px; border: 1px #FFD600 solid"></div>
+            </nav>
+
+            <div class="line1"></div>
+        </div>
     </section>
 
     <section class="homeSec" id="home">
@@ -72,67 +76,128 @@
     </section>
 
     <section class="aboutSec" id="about">
-        <div class="abtSec"
-            style="width: 1; height: 615px; background: linear-gradient(180deg, #130048 0%, #4C3D75 77%)"></div>
-        <div class="AboutMe"
-            style="width: 1; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            About me</div>
-        <div class="Text"
-            style="width: 654px; height: 449px; text-align: center; color:rgb(255, 204, 0); font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
+        <div class="abtSec"></div>
+        <div class="AboutMe">About me</div>
+        <div class="Text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.</div>
+            anim id est laborum.
+        </div>
     </section>
 
     <section class="resumeSec" id="resume">
-        <div class="resSec"
-            style="width: 2; height: 881px; background: linear-gradient(180deg, #4C3D75 50%,#4C3D75 50% )">
-        </div>
-        <div class="resume"
-            style="width: 311px; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            Resume</div>
-        <div class="line2"
-            style="width: 660px; height: 0px; transform: rotate(90deg); transform-origin: 0 0; border: 1px #FFD600 solid">
-        </div>
-        <div class="arrow1"
-            style="width: 351.01px; height: 0px; transform: rotate(-180deg); transform-origin: 0 0; border: 2px #FFD600 solid">
-        </div>
-        <div class="arrow2" style="width: 351.01px; height: 0px; border: 2px #FFD600 solid"></div>
-        <div class="highschl"
-            style="width: 183px; height: 37px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            High School</div>
-        <div class="text1"
-            style="width: 250px; height: 136px; color: rgba(255, 214, 0, 0.67); font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            Matriculated in 2023 from Spine Road High School.</div>
-        <div class="lca"
-            style="width: 309px; height: 37px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 700; word-wrap: break-word">
-            Life Choices Academy</div>
-        <div class="text2"
-            style="width: 301px; color: #FFD600; font-size: 30px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            Started at Life Choices in 2024, just after finishing High School.
-        </div>
+        <div class="resSec"></div>
+        <div class="resume">Resume</div>
+        <div class="line2"></div>
+        <div class="arrow1"></div>
+        <div class="arrow2"></div>
+        <div class="highschl">High School</div>
+        <div class="text1">Matriculated in 2023 from Spine Road High School.</div>
+        <div class="lca">Life Choices Academy</div>
+        <div class="text2">Started at Life Choices in 2024, just after finishing High School.</div>
     </section>
 
-    <section>
-        <div class="skillsSec" style="width: 1; height: 758px; background: linear-gradient(180deg, #4C3D75 50%, #4C3D75 50%)"></div>
-        <div class="skills"
-            style="width: 311px; height: 143px; color: rgb(255, 204, 0); font-size: 80px; font-family: Inika; font-weight: 400; word-wrap: break-word">
-            Skills</div><div class="Rectangle23" style="width: 250px; height: 46px; background: #E5E4E4"></div>
-        <div class="Rectangle22" style="width: 250px; height: 46px; background: #E5E4E4"></div>
-        <div class="Rectangle21" style="width: 250px; height: 46px; background: #E5E4E4"></div>
-        <div class="Rectangle24"
-            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
-        </div>
-        <div class="Rectangle25"
-            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
-        </div>
-        <div class="Rectangle26"
-            style="width: 250px; height: 250px; background: linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%), linear-gradient(0deg, #E5E4E4 0%, #E5E4E4 100%)">
-        </div>
+    <section class="skillsSec" id="skills">
+        <div class="skSec"></div>
+        <div class="skills">Skills</div>
+        <img class="skillsym1" src="/logos/html.png" />
+        <img class="skillsym2" src="/logos/css.png" />
+        <img class="skillsym3" src="/logos/btsp.svg" />
+        <div class="skill1">HTML</div>
+        <div class="skill2">CSS</div>
+        <div class="skill3">BOOTSTRAP</div>
     </section>
 
+    <section class="testSec" id="testimonials">
+        <div class="testisec"></div>
+        <div class="Testimonials">Testimonials</div>
+        <div class="pic1"></div>
+        <div class="pic2"></div>
+        <div class="pic3"></div>
+        <div class="pic4"></div>
+        <div class="pic5"></div>
+
+        <div class="test1"></div>
+        <div class="test2"></div>
+        <div class="test3"></div>
+        <div class="test4"></div>
+        <div class="test5"></div>
+
+        <div class="Testimonial1">Testimonial1</div>
+        <div class="Testimonial2">Testimonial2</div>
+        <div class="Testimonial3">Testimonial3</div>
+        <div class="Testimonial4">Testimonial4</div>
+        <div class="Testimonial5">Testimonial5</div>
+    </section>
+
+    <section class="projectsSec" id="projects">
+        <div class="Projects">Projects</div>
+        <nav class="projectBack" style="">
+
+            <div id="card" class="d-flex align-items-center gap-3">
+                <div class="card1" style="width: 17.29rem;">
+                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="card-link">Go to project</a>
+                    </div>
+                </div>
+
+                <div class="card2" style="width: 17.2rem;">
+                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="card-link">Go to project</a>
+                    </div>
+                </div>
+
+                <div class="card3" style="width: 17.2rem;">
+                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="card-link">Go to project</a>
+                    </div>
+                </div>
+
+                <div class="card4" style="width: 17.2rem;">
+                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="card-link">Go to project</a>
+                    </div>
+                </div>
+
+                <div class="card5" style="width: 17.2rem;">
+                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="card-link">Go to project</a>
+                    </div>
+                </div>
+            </div>
+    </section>
 </body>
 
 </html>
