--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<header>
     <section class="navSec">
         <div class="fixed-top">
             <nav class="navbar navbar-expand-lg">
@@ -54,13 +54,16 @@
             <div class="line1"></div>
         </div>
     </section>
+</header>
 
+<body>
+    <!--ADD YOUR IMAGE GIRLY POPS-->
     <section class="homeSec" id="home">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 p-0">
                     <div class="overlay-container">
-                        <img src="/backgroounds/back1.png" class="img-fluid" alt="Image" width="100%" height="100%">
+                        <img src="/backgroounds/back1.png" class="img-fluid" alt="Image">
                         <div class="overlay-text">
                             <h1 class="display-1">Masoodah George</h1>
                             <h3>Web Developer</h3>
@@ -75,15 +78,15 @@
         <!--my picture-->
     </section>
 
+    <!--ADD YOUR ABOUT ME-->
     <section class="aboutSec" id="about">
         <div class="abtSec"></div>
         <div class="AboutMe">About me</div>
         <div class="Text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-            anim id est laborum.
+            As an aspiring web developer, I'm on a mission to learn, grow, and make my mark in the ever-evolving world
+            of technology. While I may be at the beginning of my journey, I'm committed to soaking up knowledge and
+            mastering everything from HTML and CSS to JavaScript and beyond.I'm excited to embark on
+            this journey of growth and discovery, and I'm ready to make my mark in the world of web development.
         </div>
     </section>
 
@@ -110,31 +113,52 @@
         <div class="skill3">BOOTSTRAP</div>
     </section>
 
+    <!--FINISH TESTIMONIALS-->
     <section class="testSec" id="testimonials">
         <div class="testisec"></div>
         <div class="Testimonials">Testimonials</div>
-        <div class="pic1"></div>
-        <div class="pic2"></div>
+
+        <img class="pic1" src="/testimonials/Anushqa.jpg"></img>
+        <img class="pic2" src="/testimonials/Asheeka.jpg"></img>
         <div class="pic3"></div>
         <div class="pic4"></div>
         <div class="pic5"></div>
 
-        <div class="test1"></div>
-        <div class="test2"></div>
-        <div class="test3"></div>
-        <div class="test4"></div>
-        <div class="test5"></div>
+        <div class="test1">
+            <h4>Anushqa Kandan</h4>
+        </div>
 
-        <div class="Testimonial1">Testimonial1</div>
-        <div class="Testimonial2">Testimonial2</div>
+        <div class="test2">
+            <h4>Asheeka Samuels</h4>
+        </div>
+
+        <div class="test3">
+            <h4>Candice Keet</h4>
+        </div>
+
+        <div class="test4">
+            <h4>Caitlin Dalwai</h4>
+        </div>
+
+        <div class="test5">
+            <h4>Nazneen Abrahams</h4>
+        </div>
+
+        <div class="Testimonial1">Masoodah is an extremely dedicated worker who always strives to do the best she can.
+            She remains willing to attain new knowledge and works very well in a team. Masoodah has the ability to
+            create a comfortable atmosphere for those around her.</div>
+        <div class="Testimonial2">One of Masoodah's strong suits is communication and teamwork. I've had the pleasure of
+            working with Masoodah and what I can say from our interactions is that she is a dedicated and hardworking
+            individual.</div>
         <div class="Testimonial3">Testimonial3</div>
         <div class="Testimonial4">Testimonial4</div>
         <div class="Testimonial5">Testimonial5</div>
     </section>
 
+    <!--FINISH LINKS-->
     <section class="projectsSec" id="projects">
         <div class="Projects">Projects</div>
-        <nav class="projectBack" style="">
+        <nav class="projectBack">
 
             <div id="card" class="d-flex align-items-center gap-3">
                 <div class="card1" style="width: 17.29rem;">
@@ -145,7 +169,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card's content.</p>
-                        <a href="#" class="card-link">Go to project</a>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
                     </div>
                 </div>
 
@@ -157,7 +181,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card's content.</p>
-                        <a href="#" class="card-link">Go to project</a>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
                     </div>
                 </div>
 
@@ -169,7 +193,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card's content.</p>
-                        <a href="#" class="card-link">Go to project</a>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
                     </div>
                 </div>
 
@@ -181,7 +205,7 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card's content.</p>
-                        <a href="#" class="card-link">Go to project</a>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
                     </div>
                 </div>
 
@@ -193,11 +217,37 @@
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the
                             card's content.</p>
-                        <a href="#" class="card-link">Go to project</a>
+                        <a class="btn btn-primary" href="#" role="button">Link</a>
                     </div>
                 </div>
             </div>
     </section>
+
+    <section class="contactSec" id="contact">
+        <img class="back2" src="/backgroounds/back2.png" />
+        <div class="intBox"></div>
+        <div class="intText">INTERESTED? SEND ME A MESSAGE!</div>
+
+        <a href="mailto:oodasbusiness@gmail.com">
+            <img class="email" src="/logos/email.jpg"></img>
+        </a>
+        <a href="whatsapp://send?phone=27621636155">
+            <img class="whatsapp" src="/logos/whatsapp.png"></img>
+        </a>
+
+        <a href="https://github.com/MasoodahGeorge" target="_blank">
+            <img class="github" src="/logos/github.png"></img>
+        </a>
+
+        <a href="https://za.linkedin.com/in/masoodah-george-79515b2b6" target="_blank">
+            <img class="linkedIn" src="/logos/LinkedIn.png"></img>
+        </a>
+    </section>
+
 </body>
+
+<footer class="footer">
+    <p>© Masoodah George 2024</p>
+</footer>
 
 </html>
