--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <img src="/backgroounds/back1.png" class="img-fluid" alt="Image">
                         <div class="overlay-text">
                             <h1 class="display-1">Masoodah George</h1>
-                            <h3>Web Developer</h3>
+                            <h3>Aspiring Web Developer</h3>
                         </div>
                     </div>
                     <div class="overlay-image">
@@ -78,9 +78,8 @@
         <!--my picture-->
     </section>
 
-    <!--ADD YOUR ABOUT ME-->
     <section class="aboutSec" id="about">
-        <div class="abtSec"></div>
+        <img class="abtSec" src="/backgroounds/abt.png"></img>
         <div class="AboutMe">About me</div>
         <div class="Text">
             As an aspiring web developer, I'm on a mission to learn, grow, and make my mark in the ever-evolving world
@@ -91,7 +90,7 @@
     </section>
 
     <section class="resumeSec" id="resume">
-        <div class="resSec"></div>
+        <img class="resSec" src="/backgroounds/res.png"></img>
         <div class="resume">Resume</div>
         <div class="line2"></div>
         <div class="arrow1"></div>
@@ -164,60 +163,40 @@
                 <div class="card1" style="width: 17.29rem;">
                     <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                        <p class="card-text">Project 1</p>
+                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card2" style="width: 17.2rem;">
                     <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                        <p class="card-text">Project 2</p>
+                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card3" style="width: 17.2rem;">
                     <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                        <p class="card-text">Project 3</p>
+                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card4" style="width: 17.2rem;">
                     <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                        <p class="card-text">Project 4</p>
+                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card5" style="width: 17.2rem;">
                     <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the
-                            card's content.</p>
-                        <a class="btn btn-primary" href="#" role="button">Link</a>
+                        <p class="card-text">Project 5</p>
+                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
             </div>
@@ -231,7 +210,7 @@
         <a href="mailto:oodasbusiness@gmail.com">
             <img class="email" src="/logos/email.jpg"></img>
         </a>
-        <a href="whatsapp://send?phone=27621636155">
+        <a href="https://web.whatsapp.com/send?phone=27621636155">
             <img class="whatsapp" src="/logos/whatsapp.png"></img>
         </a>
 
