--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--animation link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 
 <header>
@@ -57,7 +59,7 @@
 </header>
 
 <body>
-    <!--ADD YOUR IMAGE GIRLY POPS-->
+
     <section class="homeSec" id="home">
         <div class="container-fluid">
             <div class="row">
@@ -70,7 +72,7 @@
                         </div>
                     </div>
                     <div class="overlay-image">
-                        <img src="/backgroounds/download.jpg" class="me" alt="Overlay Image">
+                        <img src="/2024-05-10-01-59-43-860.jpg" class="me" alt="Overlay Image">
                     </div>
                 </div>
             </div>
@@ -119,9 +121,9 @@
 
         <img class="pic1" src="/testimonials/Anushqa.jpg"></img>
         <img class="pic2" src="/testimonials/Asheeka.jpg"></img>
-        <div class="pic3"></div>
-        <div class="pic4"></div>
-        <div class="pic5"></div>
+        <img class="pic3" src="/testimonials/candice.png"></img>
+        <img class="pic4" src="/testimonials/Caitlin.jpg"></img>
+        <img class="pic5" src="/testimonials/Naz.png"></img>
 
         <div class="test1">
             <h4>Anushqa Kandan</h4>
@@ -149,8 +151,13 @@
         <div class="Testimonial2">One of Masoodah's strong suits is communication and teamwork. I've had the pleasure of
             working with Masoodah and what I can say from our interactions is that she is a dedicated and hardworking
             individual.</div>
-        <div class="Testimonial3">Testimonial3</div>
-        <div class="Testimonial4">Testimonial4</div>
+        <div class="Testimonial3"></div>
+        <div class="Testimonial4">Having worked closely with Masoodah at Life Choices Academy, I wholeheartedly
+            recommend her for any role within your esteemed tech company. Masoodah possesses an exceptional blend of
+            technical expertise, innovative thinking, and a strong work ethic that consistently delivers outstanding
+            results.
+            Her ability to grasp complex technical concepts swiftly and apply them effectively in practical scenarios is
+            truly impressive.</div>
         <div class="Testimonial5">Masoodah is a hardworking individual, who exceeds all expectations. Working with
             Masoodah is an absolute pleasure, he brings a positive atmosphere and motivates those around him.</div>
     </section>
@@ -162,39 +169,41 @@
 
             <div id="card" class="d-flex align-items-center gap-3">
                 <div class="card1" style="width: 17.29rem;">
-                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/key.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Project 1</p>
+                        <p class="card-text">Keyboard</p>
                         <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card2" style="width: 17.2rem;">
-                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/calc.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Project 2</p>
-                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
+                        <p class="card-text">Calculator</p>
+                        <a class="btn btn-primary" href="https://calc-1kmksylnb-masoodahs-projects.vercel.app/"
+                            target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card3" style="width: 17.2rem;">
-                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Project 3</p>
+                        <p class="card-text">Bootstrap Website</p>
                         <a class="btn btn-primary" href="#" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card4" style="width: 17.2rem;">
-                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/web.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Project 4</p>
-                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
+                        <p class="card-text">Cards Website</p>
+                        <a class="btn btn-primary" href="https://cards-website.vercel.app/" target="_blank"
+                            role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card5" style="width: 17.2rem;">
-                    <img src="/backgroounds/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Project 5</p>
                         <a class="btn btn-primary" href="#" role="button">Go to project</a>
@@ -208,10 +217,10 @@
         <div class="intBox"></div>
         <div class="intText">INTERESTED? SEND ME A MESSAGE!</div>
 
-        <a href="mailto:oodasbusiness@gmail.com">
+        <a href="mailto:oodasbusiness@gmail.com" target="_blank">
             <img class="email" src="/logos/email.jpg"></img>
         </a>
-        <a href="https://web.whatsapp.com/send?phone=27621636155">
+        <a href="https://web.whatsapp.com/send?phone=27621636155" target="_blank">
             <img class="whatsapp" src="/logos/whatsapp.png"></img>
         </a>
 
