--- a/index.html
+++ b/index.html
@@ -151,7 +151,12 @@
         <div class="Testimonial2">One of Masoodah's strong suits is communication and teamwork. I've had the pleasure of
             working with Masoodah and what I can say from our interactions is that she is a dedicated and hardworking
             individual.</div>
-        <div class="Testimonial3"></div>
+        <div class="Testimonial3">In the short amount of time that I got to know Masoodah, I've experienced her
+            kindness, dedication to her coding and how hard she work to perfect what she does.
+            Whenever I would need help and I asked her for help, she would never turn me down and always try to help me
+            to the best of her abilities. I'm always motivated by her dedication towards coding.
+            Not only can she work well in a team but she's a kind, hard working and problem-solver and if that's what
+            you're looking for, I most definitely recommend Masoodah.</div>
         <div class="Testimonial4">Having worked closely with Masoodah at Life Choices Academy, I wholeheartedly
             recommend her for any role within your esteemed tech company. Masoodah possesses an exceptional blend of
             technical expertise, innovative thinking, and a strong work ethic that consistently delivers outstanding
@@ -172,7 +177,7 @@
                     <img src="./projects/key.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Keyboard</p>
-                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
+                        <a class="btn btn-primary" href="https://keyboard-23f7.vercel.app/" target="_blank" tarrole="button">Go to project</a>
                     </div>
                 </div>
 
@@ -186,10 +191,10 @@
                 </div>
 
                 <div class="card3" style="width: 17.2rem;">
-                    <img src="./projects/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="./projects/Screenshot 2024-05-10 141239.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Bootstrap Website</p>
-                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
+                        <a class="btn btn-primary" href="#" target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
 
@@ -206,7 +211,7 @@
                     <img src="./projects/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Project 5</p>
-                        <a class="btn btn-primary" href="#" role="button">Go to project</a>
+                        <a class="btn btn-primary" href="#" target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
             </div>
