--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="fixed-top">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="/MG (1).png" alt="Logo" width="60" height="60"
+                    <a class="navbar-brand" href="#"><img src="https://i.postimg.cc/mD7098mL/MG-1.png" alt="Logo" width="60" height="60"
                             class="d-inline-block align-text-top"></a> <!-- Edit the text here -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,14 +65,14 @@
             <div class="row">
                 <div class="col-12 p-0">
                     <div class="overlay-container">
-                        <img src="/backgroounds/back1.png" class="img-fluid" alt="Image">
+                        <img src="https://i.postimg.cc/c4GR1Zgt/back1.png" class="img-fluid" alt="Image">
                         <div class="overlay-text">
                             <h1 class="display-1">Masoodah George</h1>
                             <h3>Aspiring Web Developer</h3>
                         </div>
                     </div>
                     <div class="overlay-image">
-                        <img src="/2024-05-10-01-59-43-860.jpg" class="me" alt="Overlay Image">
+                        <img src="https://i.postimg.cc/BvbD7nyk/2024-05-10-01-59-43-860.jpg" class="me" alt="Overlay Image">
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
     </section>
 
     <section class="aboutSec" id="about">
-        <img class="abtSec" src="/backgroounds/abt.png"></img>
+        <img class="abtSec" src="https://i.postimg.cc/KjSMYrzh/abt.png"></img>
         <div class="AboutMe">About me</div>
         <div class="Text">
             As an aspiring web developer, I'm on a mission to learn, grow, and make my mark in the ever-evolving world
@@ -92,7 +92,7 @@
     </section>
 
     <section class="resumeSec" id="resume">
-        <img class="resSec" src="/backgroounds/res.png"></img>
+        <img class="resSec" src="https://i.postimg.cc/CMk8QtPh/res.png"></img>
         <div class="resume">Resume</div>
         <div class="line2"></div>
         <div class="arrow1"></div>
@@ -106,9 +106,9 @@
     <section class="skillsSec" id="skills">
         <div class="skSec"></div>
         <div class="skills">Skills</div>
-        <img class="skillsym1" src="/logos/html.png" />
-        <img class="skillsym2" src="/logos/css.png" />
-        <img class="skillsym3" src="/logos/btsp.svg" />
+        <img class="skillsym1" src="https://i.postimg.cc/W37khPcs/html.png" />
+        <img class="skillsym2" src="https://i.postimg.cc/QN5zY4kh/css.png" />
+        <img class="skillsym3" src="https://i.postimg.cc/RZ8QB948/Bootstrap-logo-svg.png" />
         <div class="skill1">HTML</div>
         <div class="skill2">CSS</div>
         <div class="skill3">BOOTSTRAP</div>
@@ -119,11 +119,11 @@
         <div class="testisec"></div>
         <div class="Testimonials">Testimonials</div>
 
-        <img class="pic1" src="/testimonials/Anushqa.jpg"></img>
-        <img class="pic2" src="/testimonials/Asheeka.jpg"></img>
-        <img class="pic3" src="/testimonials/candice.png"></img>
-        <img class="pic4" src="/testimonials/Caitlin.jpg"></img>
-        <img class="pic5" src="/testimonials/Naz.png"></img>
+        <img class="pic1" src="https://i.postimg.cc/yYf8QyH6/Anushqa.jpg"></img>
+        <img class="pic2" src="https://i.postimg.cc/0yF2x5jL/Asheeka.jpg"></img>
+        <img class="pic3" src="https://i.postimg.cc/s2Wf2FZ1/candice.png"></img>
+        <img class="pic4" src="https://i.postimg.cc/3RCKgg1T/Caitlin.jpg"></img>
+        <img class="pic5" src="https://i.postimg.cc/bYgyr9d0/Naz.png"></img>
 
         <div class="test1">
             <h4>Anushqa Kandan</h4>
@@ -174,7 +174,7 @@
 
             <div id="card" class="d-flex align-items-center gap-3">
                 <div class="card1" style="width: 17.29rem;">
-                    <img src="./projects/key.png" class="card-img-top" alt="...">
+                    <img src="https://i.postimg.cc/X7F0FKYD/key.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Keyboard</p>
                         <a class="btn btn-primary" href="https://keyboard-23f7.vercel.app/" target="_blank" tarrole="button">Go to project</a>
@@ -182,24 +182,24 @@
                 </div>
 
                 <div class="card2" style="width: 17.2rem;">
-                    <img src="./projects/calc.png" class="card-img-top" alt="...">
+                    <img src="https://i.postimg.cc/7Zn8tx73/calc.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Calculator</p>
-                        <a class="btn btn-primary" href="https://calc-1kmksylnb-masoodahs-projects.vercel.app/"
+                        <a class="btn btn-primary" href="https://calc-seven-chi.vercel.app/"
                             target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card3" style="width: 17.2rem;">
-                    <img src="./projects/Screenshot 2024-05-10 141239.png" class="card-img-top" alt="...">
+                    <img src="https://i.postimg.cc/3wLM7ntW/Screenshot-2024-05-10-141239.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Bootstrap Website</p>
-                        <a class="btn btn-primary" href="#" target="_blank" role="button">Go to project</a>
+                        <a class="btn btn-primary" href="https://bootstrap-eight-black.vercel.app/" target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
 
                 <div class="card4" style="width: 17.2rem;">
-                    <img src="./projects/web.png" class="card-img-top" alt="...">
+                    <img src="https://i.postimg.cc/gjZ1Vdm6/web.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Cards Website</p>
                         <a class="btn btn-primary" href="https://cards-website.vercel.app/" target="_blank"
@@ -208,33 +208,33 @@
                 </div>
 
                 <div class="card5" style="width: 17.2rem;">
-                    <img src="./projects/0cc2c10d95a01f22d634af82370b749d.jpg" class="card-img-top" alt="...">
+                    <img src="https://i.postimg.cc/W3nd2RQg/Screenshot-2024-05-10-160954.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Project 5</p>
-                        <a class="btn btn-primary" href="#" target="_blank" role="button">Go to project</a>
+                        <a class="btn btn-primary" href="https://wednesday-t1d7.vercel.app/" target="_blank" role="button">Go to project</a>
                     </div>
                 </div>
             </div>
     </section>
 
     <section class="contactSec" id="contact">
-        <img class="back2" src="/backgroounds/back2.png" />
+        <img class="back2" src="https://i.postimg.cc/R0pY2q0H/back2.png" />
         <div class="intBox"></div>
         <div class="intText">INTERESTED? SEND ME A MESSAGE!</div>
 
         <a href="mailto:oodasbusiness@gmail.com" target="_blank">
-            <img class="email" src="/logos/email.jpg"></img>
+            <img class="email" src="https://i.postimg.cc/X7qC7hH0/email.jpg"></img>
         </a>
         <a href="https://web.whatsapp.com/send?phone=27621636155" target="_blank">
-            <img class="whatsapp" src="/logos/whatsapp.png"></img>
+            <img class="whatsapp" src="https://i.postimg.cc/HLnZ0Hts/whatsapp-icon-free-png.png"></img>
         </a>
 
         <a href="https://github.com/MasoodahGeorge" target="_blank">
-            <img class="github" src="/logos/github.png"></img>
+            <img class="github" src="https://i.postimg.cc/NF6pG0Qb/github.jpg"></img>
         </a>
 
         <a href="https://za.linkedin.com/in/masoodah-george-79515b2b6" target="_blank">
-            <img class="linkedIn" src="/logos/LinkedIn.png"></img>
+            <img class="linkedIn" src="https://i.postimg.cc/FRcxGKkm/linkedin-logo-linkedin-icon-transparent-free-png-1.png"></img>
         </a>
     </section>
 
